FP-273: Fix app height too short in Safari browser
1. Remove stylesthat are ineffectual in Safari.
2. Remove redundant style (same as step 1)
3. Extend use flex solution, which works in Safari too.

--- a/client/src/components/Workbench/Workbench.scss
+++ b/client/src/components/Workbench/Workbench.scss
@@ -3,7 +3,6 @@
     flex-direction: row;
 
     color: #484848;
-    height: 100%;
 }
 .workbench-content {
     /* Styles as a flex child */
